Port to 1.21.4 Fabric
Found this fork laying around, never got told about it: https://github.com/andre111/Ears/tree/1.21.4

Probably because it's a bit broken. Did the hard part though, fixing it up